--- a/taskTracker/src/App.css
+++ b/taskTracker/src/App.css
@@ -37,7 +37,7 @@
   --accent-green: #9e9e9e;
   --text-main: #ffffff;
   --auto-green: #222222;
-  --btn-box-bg: #000000;
+  --btn-box-bg: #3f3f3f;
   --btn-icon-filter: invert(1);
 }
 
